<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:text="@string/PostDefaultTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_below="@+id/tableRow1"
        android:layout_centerHorizontal="true" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
        <TextView
            android:id="@+id/scoret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/PostScoreText" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/PostScoreDefault" />

    </TableRow>

    <CheckBox
        android:id="@+id/nsfw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/upvote"
        android:layout_alignParentEnd="true"
        android:text="@string/PostNsfw" />

    <Button
        android:id="@+id/upvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/downvote"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/PostButtonUpvote" />

    <Button
        android:id="@+id/downvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/PostButtonDownvote" />

</TableLayout>