<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleSignUo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignUpTitle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/mailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SignUpHintMail"
        android:inputType="textPersonName"
        android:layout_below="@+id/usernameSingup"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/usernameSingup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/LoginUsernameHint"
        android:inputType="textPersonName"
        android:layout_below="@+id/passwordLogin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="65dp" />

    <EditText
        android:id="@+id/passwordSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/LoginPAsswordHint"
        android:inputType="textPassword"
        android:layout_below="@+id/mailSignUp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/passwordSignup"
        android:ems="10"
        android:hint="@string/PasswordCheckHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signupButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/SignUpTitle" />
</RelativeLayout>